[gd_scene load_steps=4 format=3 uid="uid://d1mxqw7lvur67"]

[ext_resource type="Texture2D" uid="uid://d0inxn2li420f" path="res://assets/beat step.svg" id="1_ifcqn"]
[ext_resource type="Script" path="res://components/beat_step.gd" id="1_ns0ca"]
[ext_resource type="Texture2D" uid="uid://bcabnitve336v" path="res://assets/beat quarter.svg" id="2_eola3"]

[node name="BeatStep" type="Node2D"]
script = ExtResource("1_ns0ca")

[node name="BeatStep" type="Sprite2D" parent="."]
scale = Vector2(0.470588, 0.470588)
texture = ExtResource("1_ifcqn")

[node name="BeatQuarter1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.470588, 0.470588)
texture = ExtResource("2_eola3")

[node name="BeatQuarter2" type="Sprite2D" parent="."]
visible = false
rotation = 1.5708
scale = Vector2(0.470588, 0.470588)
texture = ExtResource("2_eola3")

[node name="BeatQuarter3" type="Sprite2D" parent="."]
visible = false
rotation = 3.14159
scale = Vector2(0.470588, 0.470588)
texture = ExtResource("2_eola3")

[node name="BeatQuarter4" type="Sprite2D" parent="."]
visible = false
rotation = -1.5708
scale = Vector2(0.470588, 0.470588)
texture = ExtResource("2_eola3")
